--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<div translate>If you connect to docker remote api failed, try the following steps:</div>
 							<ul>
 								<li style="list-style-type: decimal;" translate>Check docker remote api port is opened, and not blocked by firewall.</li>
-								<li style="list-style-type: decimal;" translate>Downgrade the api version, like v1.8, v1.7...etc, or keep empty.</li>
+								<li style="list-style-type: decimal;" translate>Downgrade the api version, like v1.9, v1.8...etc, or keep empty.</li>
 								<li style="list-style-type: decimal;" translate>Click Reset button and try again.</li>
 							</ul>
 						</div>
@@ -177,7 +177,7 @@
 											<button ng-click="attach(c)" class="btn btn-primary btn-xs" translate>Attach</button>
 											<button ng-click="openStartContainerModal(c)" ng-show="!c.running" class="btn btn-info btn-xs" translate>Start</button>
 											<button ng-click="stop(c)" ng-show="c.running" class="btn btn-warning btn-xs" translate>Stop</button>
-											<button ng-click="remove(c)" ng-show="!c.running" class="btn btn-danger btn-xs" translate>Remove</button>
+											<button ng-click="remove(c)" class="btn btn-danger btn-xs" translate>Remove</button>
 										</td>
 									</tr>
 								</tbody>
