add loading icon when init page

--- a/index.src.html
+++ b/index.src.html
@@ -254,5 +254,15 @@
 				</td>
 			</tr>
 		</table>
+		<div ng-show="!!loading" style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px;">
+			<div style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; background: #fff;"></div>
+			<table style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px;">
+				<tr>
+					<td style="text-align: center;">
+						<img src="index/loading.png" class="spinner" style="width: 128px; height: 128px; display: inline-block;"/>
+					</td>
+				</tr>
+			</table>
+		</div>
 	</body>
 </html>
