--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>KDockerWeb</title>
 		<link rel="shortcut icon" href="favicon.png">
 		<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="index/index.min.css"/>
+		<link rel="stylesheet" href="index/main.min.css"/>
 		<script src="lib/angular/angular.min.js"></script>
 		<script src="lib/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js"></script>
-		<script src="index/index.min.js"></script>
+		<script src="index/main.min.js"></script>
 	</head>
 	<body ng-controller="IndexCtrl" style="padding: 10px;">
 		<div ng-show="devMode" style="position: fixed; left: 1em; bottom: 3em; font-size: 0.8em;">
@@ -38,16 +38,17 @@
 			<tr>
 				<td style="vertical-align: top; width: 10em; padding-top: 1em; line-height: 3em;">
 					<div>
-						<button ng-model="tab" btn-radio="'Containers'" class="btn btn-primary">{{"Containers" | translate}}</button>
+						<button ng-class="{'animated tada': loadingCtrl.container}" ng-model="tab" btn-radio="'Containers'" class="btn btn-primary">{{"Containers" | translate}}</button>
 					</div>
 					<div>
-						<button ng-model="tab" btn-radio="'Images'" class="btn btn-primary">{{"Images" | translate}}</button>
+						<button ng-class="{'animated tada': loadingCtrl.image}" ng-model="tab" btn-radio="'Images'" class="btn btn-primary">{{"Images" | translate}}</button>
 					</div>
 					<div>
 						<button ng-model="tab" btn-radio="'Config'" class="btn btn-primary">{{"Config" | translate}}</button>
 					</div>
 				</td>
 				<td style="vertical-align: top;">
+
 					<div ng-controller="ConfigCtrl" ng-show="tab == 'Config'">
 						<div class="tab-header-bar">
 							<span translate>Config</span>
@@ -119,12 +120,13 @@
 							</tbody>
 						</table>
 					</div>
+
 					<div ng-controller="ContainerCtrl" ng-show="tab == 'Containers'">
 						<div class="tab-header-bar">
 							<span translate>Containers</span>
 							<span ng-show="DockerData.nickname">in {{DockerData.nickname}}</span>
 							<button ng-click="curtab=null;reload($event)" tooltip="{{'Press [SHIFT] to reload image list too.' | translate}}" class="btn btn-default">
-								<span ng-class="{spinner: loading, active: loading}" class="glyphicon glyphicon-refresh"></span>
+								<span ng-class="{spinner: loadingCtrl.container}" class="glyphicon glyphicon-refresh"></span>
 							</button>
 							<button ng-show="curtab" ng-click="attach()" class="btn btn-primary" translate>Back</button>
 							<span ng-repeat="c in tabs">
@@ -186,12 +188,13 @@
 						</div>
 						<div ng-repeat="c in tabs" id="{{c.Id}}_terminal" ng-show="curtab.Id === c.Id"></div>
 					</div>
+
 					<div ng-controller="ImageCtrl" ng-show="tab == 'Images'">
 						<div class="tab-header-bar">
 							<span translate>Images</span>
 							<span ng-show="DockerData.nickname">in {{DockerData.nickname}}</span>
 							<button ng-click="reload($event)" tooltip="{{'Press [SHIFT] to reload container list too.' | translate}}" class="btn btn-default">
-								<span ng-class="{spinner: loading, active: loading}" class="glyphicon glyphicon-refresh"></span>
+								<span ng-class="{spinner: loadingCtrl.image}" class="glyphicon glyphicon-refresh"></span>
 							</button>
 						</div>
 						<div style="position: relative;">
@@ -228,8 +231,19 @@
 							<div ng-show="loading" class="loading-block" style="width: 100%; height: 100%; position: absolute; top: 0; left: 0;"></div>
 						</div>
 					</div>
+
 				</td>
 			</tr>
 		</table>
+		<div ng-show="!!loading" style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px;">
+			<div style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; background: #fff;"></div>
+			<table style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px;">
+				<tr>
+					<td style="text-align: center;">
+						<img src="index/loading.png" class="spinner" style="width: 128px; height: 128px; display: inline-block;"/>
+					</td>
+				</tr>
+			</table>
+		</div>
 	</body>
 </html>
