add Privileged option in create container

--- a/index.src.html
+++ b/index.src.html
@@ -155,7 +155,7 @@
 							</span>
 							<button ng-click="openCreateContainerModal()" class="btn btn-info" translate>Create</button>
 						</div>
-						<div style="position: relative;">
+						<div class="table-responsive" style="position: relative;">
 							<table ng-show="!curtab" class="table table-bordered table-striped table-hover table-condensed">
 								<thead>
 									<tr>
