--- a/index/CreateContainerModalContent.html
+++ b/index/CreateContainerModalContent.html
@@ -89,6 +89,12 @@
 					<input type="checkbox" ng-model="startconfig.PublishAllPorts"/>
 				</td>
 			</tr>
+			<tr>
+				<th translate>Privileged</th>
+				<td>
+					<input type="checkbox" ng-model="startconfig.Privileged"/>
+				</td>
+			</tr>
 		</table>
 	</div>
 	<div class="modal-footer">
