--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<span translate>Config</span>
 							<button ng-click="DockerData.reset()" class="btn btn-primary" translate>Reset</button>
 						</div>
-						<table class="table table-hover table-condensed" style="float: left; width: auto;">
+						<table class="table table-hover table-condensed" style="float: left; width: auto; min-width: 20em;">
 							<tr>
 								<th translate>Nickname</th>
 								<td style="white-space: nowrap;">
