--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<a href="."><button class="btn btn-primary">KDocker-Web</button></a>
 							</td>
 							<td style="padding: 0em 0.5em;">
-								<alert style="margin: 0em; padding: 0.4em 1em;" ng-repeat="alert in alerts" type="alert.type" close="alerts.splice($index, 1)" ng-click="alerts.splice($index, 1)">{{alert.msg}}</alert>
+								<alert style="margin: 0em; padding: 0.4em 1em;" ng-repeat="alert in alerts" type="{{alert.type}}" close="alerts.splice($index, 1)" ng-click="alerts.splice($index, 1)">{{alert.msg}}</alert>
 							</td>
 							<td style="vertical-align: top; width: 1em;">
 								<select ng-model="locale" ng-options="lang.id as lang.name for lang in DockerData.locales" ng-change="updateLocale()" class="form-control input-sm" style="width: auto;"></select>
@@ -152,7 +152,7 @@
 								<tbody>
 									<tr ng-repeat="c in DockerData.containers" ng-class="{danger: !c.running}">
 										<td>
-											<span class="ellipsis" style="display: inline-block; max-width: 8em;" title="{{c.Id}}">{{c.Id}}</span>
+											<span title="{{c.Id}}" style="white-space: nowrap;">{{c.Id.substr(0, 8)}} ...</span>
 										</td>
 										<td>
 											<span>{{c.name}}</span>
@@ -161,7 +161,7 @@
 											<span>{{c.Image}}</span>
 										</td>
 										<td>
-											<span class="ellipsis" style="display: inline-block; max-width: 10em;" tooltip="{{c.Command}}">{{c.Command}}</span>
+											<span>{{c.Command}}</span>
 										</td>
 										<td>
 											<div ng-repeat="p in c.Ports" style="white-space: nowrap;">
@@ -177,7 +177,7 @@
 											<span>{{c.Status}}</span>
 										</td>
 										<td>
-											<button ng-click="attach(c)" class="btn btn-primary btn-xs" translate>Attach</button>
+											<button ng-click="attach($event, c)" tooltip="{{'Press [SHIFT] to load full logs.' | translate}}" tooltip-placement="left" class="btn btn-primary btn-xs" translate>Attach</button>
 											<button ng-click="openStartContainerModal(c)" ng-show="!c.running" class="btn btn-info btn-xs" translate>Start</button>
 											<button ng-click="stop(c)" ng-show="c.running" class="btn btn-warning btn-xs" translate>Stop</button>
 											<button ng-click="remove(c)" class="btn btn-danger btn-xs" translate>Remove</button>
@@ -212,10 +212,13 @@
 								<tbody>
 									<tr ng-repeat="img in DockerData.images">
 										<td>
-											<span class="ellipsis" style="display: inline-block; max-width: 10em;" title="{{img.Id}}">{{img.Id}}</span>
+											<span title="{{img.Id}}" style="white-space: nowrap;">{{img.Id.substr(0, 8)}} ...</span>
 										</td>
 										<td>
-											<span ng-repeat="tag in img.RepoTags">{{tag}}</span>
+											<div ng-repeat="tag in img.RepoTags">
+												<span>{{tag}}</span>
+												<button ng-click="removeTag(tag)" ng-show="img.RepoTags.length > 1" class="btn btn-danger btn-xs" translate>X</button>
+											</div>
 										</td>
 										<td>
 											<span>{{img.VirtualSize | humanSize}}</span>
