--- a/index.src.html
+++ b/index.src.html
@@ -47,7 +47,7 @@
 								<a href="."><button class="btn btn-primary">KDocker-Web</button></a>
 							</td>
 							<td style="padding: 0em 0.5em;">
-								<alert style="margin: 0em; padding: 0.4em 1em;" ng-repeat="alert in alerts" type="alert.type" close="alerts.splice($index, 1)" ng-click="alerts.splice($index, 1)">{{alert.msg}}</alert>
+								<alert style="margin: 0em; padding: 0.4em 1em;" ng-repeat="alert in alerts" type="{{alert.type}}" close="alerts.splice($index, 1)" ng-click="alerts.splice($index, 1)">{{alert.msg}}</alert>
 							</td>
 							<td style="vertical-align: top; width: 1em;">
 								<select ng-model="locale" ng-options="lang.id as lang.name for lang in DockerData.locales" ng-change="updateLocale()" class="form-control input-sm" style="width: auto;"></select>
