change default config

--- a/index.src.html
+++ b/index.src.html
@@ -89,15 +89,15 @@
 								</td>
 							</tr>
 							<tr>
-								<th translate>Port</th>
+								<th><span translate>Port</span>*</th>
 								<td>
-									<input type="number" ng-model="DockerData.port" class="form-control input-sm"/>
+									<input type="number" placeholder="4243" ng-model="DockerData.port" class="form-control input-sm"/>
 								</td>
 							</tr>
 							<tr>
 								<th translate>API Version</th>
 								<td>
-									<input type="text" placeholder="v1.9" ng-model="DockerData.apiver" class="form-control input-sm"/>
+									<input type="text" placeholder="v1.13" ng-model="DockerData.apiver" class="form-control input-sm"/>
 								</td>
 							</tr>
 							<tr>
