--- a/index.src.html
+++ b/index.src.html
@@ -27,6 +27,7 @@
 		<script src="index/CreateContainerModalCtrl.js"></script>
 		<script src="index/ImageCtrl.js"></script>
 		<script src="index/StartContainerModalCtrl.js"></script>
+		<script src="index/InspectContainerModalCtrl.js"></script>
 		<script src="index/main.js"></script>
 		<!-- no load in dev mode
 		<script src="index/angular-template.tmp.js"></script>
@@ -193,7 +194,7 @@
 												</span>
 											</div>
 										</td>
-										<td>
+										<td ng-click="openInspectContainerModal(c)" style="cursor: pointer;">
 											<span>{{c.Status}}</span>
 										</td>
 										<td>
