--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 												</span>
 											</div>
 										</td>
-										<td>
+										<td ng-click="openInspectContainerModal(c)" style="cursor: pointer;">
 											<span>{{c.Status}}</span>
 										</td>
 										<td>
