--- a/index.src.html
+++ b/index.src.html
@@ -267,6 +267,7 @@
 			<table style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px;">
 				<tr>
 					<td style="text-align: center;">
+						<img class="shaker" src="logo.png" style="max-width: 100%; max-height: 100%; object-fit: contain; display: inline-block;"/>
 						<img src="index/loading.png" class="spinner" style="width: 128px; height: 128px; display: inline-block;"/>
 					</td>
 				</tr>
