support copy images between dockers

--- a/index.src.html
+++ b/index.src.html
@@ -28,6 +28,7 @@
 		<script src="index/ImageCtrl.js"></script>
 		<script src="index/StartContainerModalCtrl.js"></script>
 		<script src="index/InspectContainerModalCtrl.js"></script>
+		<script src="index/CopyImageModalCtrl.js"></script>
 		<script src="index/main.js"></script>
 		<!-- no load in dev mode
 		<script src="index/angular-template.tmp.js"></script>
@@ -250,6 +251,7 @@
 											<span>{{img.Created * 1000 | date:'yyyy-MM-dd HH:mm'}}</span>
 										</td>
 										<td>
+											<button ng-click="openCopyImageModal(img)" ng-show="DockerData.dockerList.length > 1" class="btn btn-info btn-xs" translate>Copy</button>
 											<button ng-click="remove(img)" class="btn btn-danger btn-xs" translate>Remove</button>
 										</td>
 									</tr>
