support copy and paste in terminal

--- a/index.src.html
+++ b/index.src.html
@@ -9,6 +9,7 @@
 		<link rel="shortcut icon" href="favicon.png">
 		<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 		<!-- build:css index/main.min.css -->
+		<link rel="stylesheet" href="lib/xterm.js/src/xterm.css">
 		<link rel="stylesheet" href="lib/animate.css/animate.css">
 		<link rel="stylesheet" href="index/main.css">
 		<!-- endbuild -->
@@ -19,7 +20,7 @@
 		<script src="lib/angular-animate/angular-animate.js"></script>
 		<script src="lib/angular-local-storage/angular-local-storage.js"></script>
 		<script src="lib/angular-translate/angular-translate.js"></script>
-		<script src="lib/term.js/src/term.js"></script>
+		<script src="lib/xterm.js/src/xterm.js"></script>
 		<script src="lib/app.js"></script>
 		<script src="lib/locale.js"></script>
 		<script src="directives/selectDocker.js"></script>
